# engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE-MIT
doc/doxygen/: Doxyfile
src/: CMakeLists.txt
src/core/: Types.cpp  Types.h
src/core/math/: FloatComparator.cpp  FloatComparator.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
tests/: CMakeLists.txt
tests/core/math/: Vector2.test.cpp  test_Vector3.cpp
